# renpy-dialogue-importer

./: .gitignore  README.md  README_ja.md  main.py  pyproject.toml  requirements.txt
src/: cli.py  export.py  input.py
