[tool.poetry]
name = "renpy-dialogue-importer"
version = "0.1.0"
description = ""
authors = ["drago-suzuki58 <dorasuzu58@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
